--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.ads": "3.7.5",
     "com.unity.analytics": "3.6.11",
     "com.unity.collab-proxy": "1.9.0",
+    "com.unity.device-simulator": "3.0.3-preview",
     "com.unity.ext.nunit": "1.0.6",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.11",
